force-app/main/default/objects/P__c/P__c.object-meta.xml
<CustomObject>
    <description>Object created for the Pull report creation; R-23768</description>
    <label>Pull</label>
    <nameField>
        <displayFormat>Pull-{000000}</displayFormat>
        <label>Pull Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pulls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>