force-app/main/default/objects/P__c/fields/ACC__c.field-meta.xml
<CustomField>
    <fullName>ACC__c</fullName>
    <label>Anode/Centralizer Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>