force-app/main/default/objects/P__c/fields/ACT__c.field-meta.xml
<CustomField>
    <fullName>ACT__c</fullName>
    <label>Anode/Centralizer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>