force-app/main/default/objects/P__c/fields/AG__c.field-meta.xml
<CustomField>
    <fullName>AG__c</fullName>
    <label>MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>