force-app/main/default/objects/P__c/fields/AGP__c.field-meta.xml
<CustomField>
    <fullName>AGP__c</fullName>
    <label>Adapter Seal/Seal CPLG Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>