force-app/main/default/objects/P__c/fields/AI__c.field-meta.xml
<CustomField>
    <fullName>AI__c</fullName>
    <label>Adapter INT-GSP/Seal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>