force-app/main/default/objects/P__c/fields/AIP__c.field-meta.xml
<CustomField>
    <fullName>AIP__c</fullName>
    <label>Adapter INT-GSP/Seal CPLG Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>