force-app/main/default/objects/P__c/fields/AIS__c.field-meta.xml
<CustomField>
    <fullName>AIS__c</fullName>
    <label>Adapter INT-GSP/Seal Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>