force-app/main/default/objects/P__c/fields/AIT__c.field-meta.xml
<CustomField>
    <fullName>AIT__c</fullName>
    <label>Adapter INT-GSP/Seal Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>