force-app/main/default/objects/P__c/fields/AJ__c.field-meta.xml
<CustomField>
    <fullName>AJ__c</fullName>
    <label>Average Joints</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>