force-app/main/default/objects/P__c/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <label>Adapter Seal/MTR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>