force-app/main/default/objects/P__c/fields/ASL__c.field-meta.xml
<CustomField>
    <fullName>ASL__c</fullName>
    <label>Anode/Screen Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>