force-app/main/default/objects/P__c/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <label>Adapter Seal/Seal Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>