force-app/main/default/objects/P__c/fields/ASS__c.field-meta.xml
<CustomField>
    <fullName>ASS__c</fullName>
    <label>Adapter Seal/Seal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>