force-app/main/default/objects/P__c/fields/AST__c.field-meta.xml
<CustomField>
    <fullName>AST__c</fullName>
    <label>Adapter Seal/Seal Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>