force-app/main/default/objects/P__c/fields/AT__c.field-meta.xml
<CustomField>
    <fullName>AT__c</fullName>
    <label>Arrival Time</label>
    <type>DateTime</type>
</CustomField>