force-app/main/default/objects/P__c/fields/BM__c.field-meta.xml
<CustomField>
    <fullName>BM__c</fullName>
    <label>Banding Material</label>
    <length>100</length>
    <type>Text</type>
</CustomField>