force-app/main/default/objects/P__c/fields/C1__c.field-meta.xml
<CustomField>
    <fullName>C1__c</fullName>
    <label>Cable 1 Serial #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>