force-app/main/default/objects/P__c/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <label>Cable 2 Serial #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>