force-app/main/default/objects/P__c/fields/C__c.field-meta.xml
<CustomField>
    <fullName>C__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>