force-app/main/default/objects/P__c/fields/CA1__c.field-meta.xml
<CustomField>
    <fullName>CA1__c</fullName>
    <label>Cable 1 - # of Splices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>