force-app/main/default/objects/P__c/fields/CAC2__c.field-meta.xml
<CustomField>
    <fullName>CAC2__c</fullName>
    <label>Cable Condition 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Burn or Shorted</fullName>
            </value>
            <value>
                <fullName>Gas Blown</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Heat Damage</fullName>
            </value>
            <value>
                <fullName>High Resistance</fullName>
            </value>
            <value>
                <fullName>Imbalanced</fullName>
            </value>
            <value>
                <fullName>Insulation Loose</fullName>
            </value>
            <value>
                <fullName>Low Resistance P-G</fullName>
            </value>
            <value>
                <fullName>Low Resistance P-P</fullName>
            </value>
            <value>
                <fullName>Missing Armor</fullName>
            </value>
            <value>
                <fullName>Motor Lead Burn</fullName>
            </value>
            <value>
                <fullName>Motor Lead Damage</fullName>
            </value>
            <value>
                <fullName>Pot Head Burn</fullName>
            </value>
            <value>
                <fullName>Shorted Splice</fullName>
            </value>
            <value>
                <fullName>Splice Burn</fullName>
            </value>
            <value>
                <fullName>Wellhead Burn - EFT</fullName>
            </value>
            <value>
                <fullName>Wellhead Burn - Packoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>