force-app/main/default/objects/P__c/fields/CAN__c.field-meta.xml
<CustomField>
    <fullName>CAN__c</fullName>
    <label>Customer AFE Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>