force-app/main/default/objects/P__c/fields/CB1__c.field-meta.xml
<CustomField>
    <fullName>CB1__c</fullName>
    <label>Cable 1 Splices Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>