force-app/main/default/objects/P__c/fields/CB2__c.field-meta.xml
<CustomField>
    <fullName>CB2__c</fullName>
    <label>Cable 2 - # of Splices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>