force-app/main/default/objects/P__c/fields/CB__c.field-meta.xml
<CustomField>
    <fullName>CB__c</fullName>
    <label>Condition of Bands</label>
    <length>100</length>
    <type>Text</type>
</CustomField>