force-app/main/default/objects/P__c/fields/CC1__c.field-meta.xml
<CustomField>
    <fullName>CC1__c</fullName>
    <label>Cable 1 Reel Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>