force-app/main/default/objects/P__c/fields/CC2__c.field-meta.xml
<CustomField>
    <fullName>CC2__c</fullName>
    <label>Cable 2 Reel #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>