force-app/main/default/objects/P__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>Check Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>