force-app/main/default/objects/P__c/fields/CD1__c.field-meta.xml
<CustomField>
    <fullName>CD1__c</fullName>
    <label>Cable 1 Type/Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>