force-app/main/default/objects/P__c/fields/CD2__c.field-meta.xml
<CustomField>
    <fullName>CD2__c</fullName>
    <label>Cable 2 Type/Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>