force-app/main/default/objects/P__c/fields/CD__c.field-meta.xml
<CustomField>
    <fullName>CD__c</fullName>
    <label>CL1/DIV1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>