force-app/main/default/objects/P__c/fields/CI__c.field-meta.xml
<CustomField>
    <fullName>CI__c</fullName>
    <label>Connection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wye</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>