force-app/main/default/objects/P__c/fields/CL1__c.field-meta.xml
<CustomField>
    <fullName>CL1__c</fullName>
    <label>Cable 1 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>