force-app/main/default/objects/P__c/fields/CL2__c.field-meta.xml
<CustomField>
    <fullName>CL2__c</fullName>
    <label>Cable 2 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>