force-app/main/default/objects/P__c/fields/CM1__c.field-meta.xml
<CustomField>
    <fullName>CM1__c</fullName>
    <label>Cable 1 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>