force-app/main/default/objects/P__c/fields/CM2__c.field-meta.xml
<CustomField>
    <fullName>CM2__c</fullName>
    <label>Cable 2 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>