force-app/main/default/objects/P__c/fields/CN__c.field-meta.xml
<CustomField>
    <fullName>CN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pulls</relationshipLabel>
    <relationshipName>Pulls</relationshipName>
    <type>Lookup</type>
</CustomField>