force-app/main/default/objects/P__c/fields/Co1__c.field-meta.xml
<CustomField>
    <fullName>Co1__c</fullName>
    <label>Condition 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>