force-app/main/default/objects/P__c/fields/Co2__c.field-meta.xml
<CustomField>
    <fullName>Co2__c</fullName>
    <label>Condition 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>