force-app/main/default/objects/P__c/fields/Co__c.field-meta.xml
<CustomField>
    <fullName>Co__c</fullName>
    <label>County*</label>
    <length>100</length>
    <type>Text</type>
</CustomField>