force-app/main/default/objects/P__c/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <label>Adapter Seal/MTR CPLG Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>