force-app/main/default/objects/P__c/fields/CPC__c.field-meta.xml
<CustomField>
    <fullName>CPC__c</fullName>
    <label>Customer PayKey/Cost Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>