force-app/main/default/objects/P__c/fields/CPN__c.field-meta.xml
<CustomField>
    <fullName>CPN__c</fullName>
    <label>Customer PO number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>