force-app/main/default/objects/P__c/fields/CR1__c.field-meta.xml
<CustomField>
    <fullName>CR1__c</fullName>
    <label>Cable 1 Reel #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>