force-app/main/default/objects/P__c/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <label>CT/Ratio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>