force-app/main/default/objects/P__c/fields/CRC2__c.field-meta.xml
<CustomField>
    <fullName>CRC2__c</fullName>
    <label>Cable 2 Reel Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>