force-app/main/default/objects/P__c/fields/CRN__c.field-meta.xml
<CustomField>
    <fullName>CRN__c</fullName>
    <label>Customer Rep/Contractor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>