force-app/main/default/objects/P__c/fields/CS1__c.field-meta.xml
<CustomField>
    <fullName>CS1__c</fullName>
    <label>Cap Line Tube Type Size 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>