force-app/main/default/objects/P__c/fields/CV__c.field-meta.xml
<CustomField>
    <fullName>CV__c</fullName>
    <label>Control Volts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>