force-app/main/default/objects/P__c/fields/CVS__c.field-meta.xml
<CustomField>
    <fullName>CVS__c</fullName>
    <label>Check Valve/Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>