force-app/main/default/objects/P__c/fields/CW__c.field-meta.xml
<CustomField>
    <fullName>CW__c</fullName>
    <label>Casing Size/Wt/Drift(in)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4.5_9.5#_3.965</fullName>
            </value>
            <value>
                <fullName>4.5_10.5#_3.927</fullName>
            </value>
            <value>
                <fullName>4.5_11.6#_3.875</fullName>
            </value>
            <value>
                <fullName>4.5_12.6#_3.833</fullName>
            </value>
            <value>
                <fullName>4.5_13.5#_3.795</fullName>
            </value>
            <value>
                <fullName>4.5_15.1#_3.701</fullName>
            </value>
            <value>
                <fullName>5.0_11.5#_4.435</fullName>
            </value>
            <value>
                <fullName>5.0_13.0#_4.369</fullName>
            </value>
            <value>
                <fullName>5.0_15.0#_4.283</fullName>
            </value>
            <value>
                <fullName>5.0_18.0#_4.151</fullName>
            </value>
            <value>
                <fullName>5.0_20.3#_4.059</fullName>
            </value>
            <value>
                <fullName>5.5_13.0#_4.919</fullName>
            </value>
            <value>
                <fullName>5.5_14.0#_4.887</fullName>
            </value>
            <value>
                <fullName>5.5_15.5#_4.825</fullName>
            </value>
            <value>
                <fullName>5.5_17.0#_4.767</fullName>
            </value>
            <value>
                <fullName>5.5_20.0#_4.653</fullName>
            </value>
            <value>
                <fullName>5.5_23.0#_4.545</fullName>
            </value>
            <value>
                <fullName>5.5_26.0#_4.423</fullName>
            </value>
            <value>
                <fullName>6.0_15.0#_5.399</fullName>
            </value>
            <value>
                <fullName>6.0_18.0#_5.299</fullName>
            </value>
            <value>
                <fullName>6.0_20.0#_5.227</fullName>
            </value>
            <value>
                <fullName>6.0_23.0#_5.115</fullName>
            </value>
            <value>
                <fullName>6.0_26.0#_5.007</fullName>
            </value>
            <value>
                <fullName>6.625_17.0#_6.010</fullName>
            </value>
            <value>
                <fullName>6.625_20.0#_5.924</fullName>
            </value>
            <value>
                <fullName>6.625_24.0#_5.796</fullName>
            </value>
            <value>
                <fullName>6.625_28.0#_5.666</fullName>
            </value>
            <value>
                <fullName>6.625_32.0#_5.550</fullName>
            </value>
            <value>
                <fullName>6.625_35.0#_5.450</fullName>
            </value>
            <value>
                <fullName>7.0_17.0#_6.413</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>