force-app/main/default/objects/P__c/fields/Cy__c.field-meta.xml
<CustomField>
    <fullName>Cy__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>