force-app/main/default/objects/P__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <label>Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>