force-app/main/default/objects/P__c/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <label>Current Pull: Date Job Completed</label>
    <type>Date</type>
</CustomField>