force-app/main/default/objects/P__c/fields/DCO__c.field-meta.xml
<CustomField>
    <fullName>DCO__c</fullName>
    <label>Drain Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>