force-app/main/default/objects/P__c/fields/DH__c.field-meta.xml
<CustomField>
    <fullName>DH__c</fullName>
    <label>Details of HSE Incidents</label>
    <length>100</length>
    <type>Text</type>
</CustomField>