force-app/main/default/objects/P__c/fields/DI__c.field-meta.xml
<CustomField>
    <fullName>DI__c</fullName>
    <label>Days Installed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>