force-app/main/default/objects/P__c/fields/DM__c.field-meta.xml
<CustomField>
    <fullName>DM__c</fullName>
    <label>Motor LT Drag Marks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>