force-app/main/default/objects/P__c/fields/DN__c.field-meta.xml
<CustomField>
    <fullName>DN__c</fullName>
    <label>Delays (Number of)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>