force-app/main/default/objects/P__c/fields/DS__c.field-meta.xml
<CustomField>
    <fullName>DS__c</fullName>
    <label>Current Pull: Date Job Started</label>
    <type>Date</type>
</CustomField>