force-app/main/default/objects/P__c/fields/DSC__c.field-meta.xml
<CustomField>
    <fullName>DSC__c</fullName>
    <label>Desander/Screen Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>