force-app/main/default/objects/P__c/fields/DST__c.field-meta.xml
<CustomField>
    <fullName>DST__c</fullName>
    <label>Desander/Screen Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>