force-app/main/default/objects/P__c/fields/DT__c.field-meta.xml
<CustomField>
    <fullName>DT__c</fullName>
    <label>Departure Time</label>
    <type>DateTime</type>
</CustomField>