force-app/main/default/objects/P__c/fields/DVS__c.field-meta.xml
<CustomField>
    <fullName>DVS__c</fullName>
    <label>Drain Valve/Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>2.375&quot;</fullName>
            </value>
            <value>
                <fullName>2.875&quot;</fullName>
            </value>
            <value>
                <fullName>3.5&quot;</fullName>
            </value>
            <value>
                <fullName>4.5&quot;</fullName>
            </value>
            <value>
                <fullName>5.5&quot;</fullName>
            </value>
            <value>
                <fullName>7.0&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>