force-app/main/default/objects/P__c/fields/DWH__c.field-meta.xml
<CustomField>
    <fullName>DWH__c</fullName>
    <label>Distance to Next Well Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>