force-app/main/default/objects/P__c/fields/ED__c.field-meta.xml
<CustomField>
    <fullName>ED__c</fullName>
    <label>Actual End Date</label>
    <type>DateTime</type>
</CustomField>