force-app/main/default/objects/P__c/fields/EL__c.field-meta.xml
<CustomField>
    <fullName>EL__c</fullName>
    <label>ESP Equipment Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>