force-app/main/default/objects/P__c/fields/EM__c.field-meta.xml
<CustomField>
    <fullName>EM__c</fullName>
    <label>Motor LT Electrical Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>