force-app/main/default/objects/P__c/fields/EO__c.field-meta.xml
<CustomField>
    <fullName>EO__c</fullName>
    <label>EFT or Pack-Off</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elect Feed-thru</fullName>
            </value>
            <value>
                <fullName>Pack-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>