force-app/main/default/objects/P__c/fields/FB__c.field-meta.xml
<CustomField>
    <fullName>FB__c</fullName>
    <label>Filter Base</label>
    <length>100</length>
    <type>Text</type>
</CustomField>