force-app/main/default/objects/P__c/fields/FBM__c.field-meta.xml
<CustomField>
    <fullName>FBM__c</fullName>
    <label>Filter Base MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>