force-app/main/default/objects/P__c/fields/FBP__c.field-meta.xml
<CustomField>
    <fullName>FBP__c</fullName>
    <label>Filter Base Part#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>