force-app/main/default/objects/P__c/fields/FBS__c.field-meta.xml
<CustomField>
    <fullName>FBS__c</fullName>
    <label>Filter Base Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>