force-app/main/default/objects/P__c/fields/FBT__c.field-meta.xml
<CustomField>
    <fullName>FBT__c</fullName>
    <label>Filter Base Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>