force-app/main/default/objects/P__c/fields/FL__c.field-meta.xml
<CustomField>
    <fullName>FL__c</fullName>
    <label>Filter Base Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>