force-app/main/default/objects/P__c/fields/FP__c.field-meta.xml
<CustomField>
    <fullName>FP__c</fullName>
    <label>Filter Base Wye Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intact</fullName>
            </value>
            <value>
                <fullName>Deformation</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Burnt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>