force-app/main/default/objects/P__c/fields/FreeText_I1__c.field-meta.xml
<CustomField>
    <fullName>FreeText_I1__c</fullName>
    <label>Intake Gas 1 Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>