force-app/main/default/objects/P__c/fields/FreeText_I1P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_I1P__c</fullName>
    <label>Intake Gas 1 Part Number Free TextOption</label>
    <length>100</length>
    <type>Text</type>
</CustomField>