force-app/main/default/objects/P__c/fields/FreeText_I2__c.field-meta.xml
<CustomField>
    <fullName>FreeText_I2__c</fullName>
    <label>Intake Gas 2 Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>