force-app/main/default/objects/P__c/fields/FreeText_I2P__c.field-meta.xml
<CustomField>
    <fullName>FreeText_I2P__c</fullName>
    <label>Intake Gas 2 Part Number Free TextOptio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>