force-app/main/default/objects/P__c/fields/FreeText_M__c.field-meta.xml
<CustomField>
    <fullName>FreeText_M__c</fullName>
    <label>MLC Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>