force-app/main/default/objects/P__c/fields/FreeText_M_desc__c.field-meta.xml
<CustomField>
    <fullName>FreeText_M_desc__c</fullName>
    <label>MLC Description Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>