force-app/main/default/objects/P__c/fields/FreeText_MC__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MC__c</fullName>
    <label>Motor CT Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>