force-app/main/default/objects/P__c/fields/FreeText_MCP__c.field-meta.xml
<CustomField>
    <fullName>FreeText_MCP__c</fullName>
    <label>Motor CT Part Number Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>