force-app/main/default/objects/P__c/fields/FreeText_ML__c.field-meta.xml
<CustomField>
    <fullName>FreeText_ML__c</fullName>
    <label>Motor LT Serial # Free Text Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>